# mscc

./: README.md
AMDKIIT/source/: CMakeLists.txt
ANN-CI/: ann-ci.rar  ann-ci.tar  ann_ci.tar
ANN-CI/ANN-CI-code/: 18fciDet_cutoff.xlsx  README  ann_ci.py.docx  input.in  input_train_18sites.xlsx  output_Amplitude_train.out  setup.py.docx
MTA Input/Sample/: 1CEK.xyz  Assignment  C2H2_10.xyz  CO2_25.xyz  H2O_16_HF.xyz  H2O_16_MP2.xyz  alpha_cyclodextrin.xyz  betacarotene.xyz
MTASpec/: MANUAL-FINAL.docx  MTASpec.tar
